--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="dark_grey">#262626</color>
+
+    <color name="background">@android:color/white</color>
+    <color name="toolbar">#FAFAFA</color>
+    <color name="status_bar">#c6c6c6</color>
+
 </resources>
