--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="toolbar_elevation">2dp</dimen>
 
     <dimen name="content_padding">8dp</dimen>
+    <dimen name="margin_horizontal">8dp</dimen>
+
 </resources>
