--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -62,7 +62,7 @@
                         android:textColor="@color/dark_grey"
                         android:textColorHint="#99262626"
                         android:textSize="16dp"
-                        android:imeOptions="flagNoExtractUi|actionDone"
+                        android:imeOptions="actionDone"
                         android:maxLines="1"
                         android:hint="@string/search_hint"
                         android:layout_marginEnd="48dp"
